import { TouchableOpacity } from 'react-native';
import { Text, HStack, Box } from 'native-base';
import { useNavigation } from '@react-navigation/native';

// routes
import { AppNavigatorRoutesProps, AppRoutes } from '@routes/app.routes';

// assets
import { ChevronLeftIcon } from '@assets/icons';

export type Props = {
  title: string;
  bgMode?: boolean;
  handleBackTo: () => void;
};

export function Header({ title, bgMode, handleBackTo }: Props) {
  return (
    <HStack alignItems={'center'} space={4} mb={6}>
      <TouchableOpacity testID="btn-back" onPress={handleBackTo}>
        <ChevronLeftIcon size="30" color={bgMode ? '#FFFFFF' : '#052B3B'} />
      </TouchableOpacity>

      <Text
        color={bgMode ? 'white' : 'gray.900'}
        fontSize={20}
        fontWeight={800}
        letterSpacing={-0.2}
      >
        {title}
      </Text>
    </HStack>
  );
}
